Amadeus/test_result.log
ImportError while loading conftest 'C:\Users\ASUS\Downloads\vs code\.vscode\python\Amadeus-AI\Amadeus\tests\conftest.py'.
tests\conftest.py:10: in <module>
    from Amadeus.main import app
main.py:4: in <module>
    from amadeus import Amadeus # Import our new class
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
amadeus.py:41: in <module>
    from general_utils import (
E     File "C:\Users\ASUS\Downloads\vs code\.vscode\python\Amadeus-AI\Amadeus\general_utils.py", line 320
E       data = await response.json()
E       ^^^^
E   IndentationError: expected an indented block after 'with' statement on line 319
